Add a favicon to the flask site

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flask Portfolio</title>
     <link rel='stylesheet' type='text/css' href='static/style.css'>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='coding.ico') }}">
 </head>
 <body>
     <h1>Setting up a Flask Web Server</h1>
